--- a/partietabelle.css
+++ b/partietabelle.css
@@ -11,7 +11,6 @@
     display: flex;
     flex-direction: row;
     padding: auto;
-    border: 1px solid black;
 }
 
 .align-content-center {
@@ -22,8 +21,8 @@
 .align-items-center {
     display: flex;
     align-items: center;
-
 }
+
 .align-self-center {
     display: flex;
     align-self: center;
@@ -76,6 +75,10 @@
     border-radius: 10px;
     padding: 10px;
     background-color: lightgoldenrodyellow;
+    border: black 1px solid;
+    margin-bottom: 10px;
+    align-self: center;
+    justify-self: center;
 }
 
 .rundenzahl{
@@ -116,7 +119,9 @@
     border-radius: 5px;
     background-color: whitesmoke;
     margin: 2px;
-    width: 60px;
+    margin-inline: 5px;
+    width: 50px;
+    font-size: 0.8rem;
 }
 
 #gesamtpunktzahlen{
@@ -161,7 +166,7 @@
     rotate: 270deg;
 }
 
-#playerRow{
+#Spielernamen{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -175,4 +180,10 @@
     margin-top: 10px;
     width: 3em;
 
+}
+
+.inputtitel{
+    text-align: center;
+    margin-top: 5px;
+    font-size: small;
 }
