--- a/partietabelle.css
+++ b/partietabelle.css
@@ -49,8 +49,13 @@
 }
 
 .pagerow{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
     width: 100vw;
     height: auto;
+    margin-bottom: 10px;
 }
 
 #ResultsContainer{
@@ -60,21 +65,27 @@
     height: auto;
     width: max-content;
     margin-inline: auto;
+    margin-bottom: 10px;
     border-radius: 10px;
     padding: 10px;
     background-color: lightgoldenrodyellow;
 }
 
-#InputContainer{
+.fancy-bg{
+    background: radial-gradient(rgb(227, 228, 176),rgb(255, 231, 98));
+    border: none;
+}
+
+#InputContainer,#EndstandContainer{
     display: flex;
     flex-direction: column;
     align-content: center;
     height: auto;
     width: max-content;
     margin-inline: auto;
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 10px;
-    background-color: lightgoldenrodyellow;
+    
     border: black 1px solid;
     margin-bottom: 10px;
     align-self: center;
@@ -106,10 +117,6 @@
 
 }
 
-.validSubmission{
-    background-color: lightgreen;
-}
-
 .hide{
     display: none;
 }
@@ -117,7 +124,7 @@
 .rundeninput{
     border: grey solid 1px;
     border-radius: 5px;
-    background-color: whitesmoke;
+    background-color: white;
     margin: 2px;
     margin-inline: 5px;
     width: 50px;
@@ -139,6 +146,7 @@
     align-items: center;
     margin-top: 10px;
     margin-bottom: 10px;
+    margin-inline: 10px;
     height: 30px;
     width: 3em;
     background-color: lightgray;
@@ -159,7 +167,7 @@
 #submitRundeButton{
     margin-top: 10px;
     margin-bottom: 10px;
-    
+    border: none;
 }
 
 #rundeninfo{
@@ -186,4 +194,92 @@
     text-align: center;
     margin-top: 5px;
     font-size: small;
+}
+
+#footer{
+    height: 50px;
+    width: 100vw;
+    background-color: gray;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#imagePlaceholder{
+    height: 20px;
+    width: 20px;
+    background-color: white;
+}
+
+#SpielAbschließen{
+    align-self: center;
+    justify-self: center;
+}
+
+html{
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+}
+
+button{
+    border-radius: 5px;
+    border: none;
+    background-color: blue;
+    color: white;
+    padding: 0.5rem;
+}
+
+button:not(.disabled):hover{
+ background-color: rgb(0, 0, 221);
+ border: white;
+}
+
+button.disabled{
+    background-color: rgb(151, 151, 199);
+
+}
+
+
+.endstandspalte{
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+}
+.endstandspaltenelement{
+    text-align: center;
+    margin-bottom: 2px;
+    margin-bottom: 2px;
+
+    min-width: 2rem;
+}
+
+#platz1{
+    background: gold;
+    color: black;
+    border-radius: 5px;
+
+}
+#platz2{
+    background: silver;
+    color: black;
+    border-radius: 5px;
+
+}
+#platz3{
+    background: #CD7F32;
+    color: black;
+    border-radius: 5px;
+
+}
+
+.endstandspaltenheader{
+    margin-bottom: 10px;
+}
+
+#SpielAbschliessen{
+    background-color: gold;
+    color: black;
+    border:black solid 1px;
 }
